# electronic-prescription-service-clinical-prescription-tracker

./: .gitallowed  .gitignore  .gitleaksignore  .grype.yaml  .pre-commit-config.yaml  .tool-versions  .trivyignore  .trivyignore.yaml  Makefile  README.md  _config.yml  eslint.config.mjs  grype.yaml  ignored_security_issues.json  index.html  package-lock.json  package.json  pyproject.toml  sonar-project.properties  tsconfig.build.json  tsconfig.defaults.json  zizmor.yml
.aws-sam/: build.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/scripts/: call_mark_jira_released.sh  create_env_release_notes.sh  create_int_rc_release_notes.sh  delete_proxygen_deployments.sh  delete_stacks.sh  deploy_api.sh  fix_cdk_json.sh  get_current_dev_tag.sh  get_target_deployed_tag.sh
.github/workflows/: cdk_package_code.yml  cdk_release_code.yml  ci.yml  create_confluence_release_notes.yml  create_release_notes.yml  delete_old_cloudformation_stacks.yml  pull_request.yml  quality_checks.yml  release.yml  run_package_code_and_api.yml  run_regression_tests.yml  run_release_code_and_api.yml  sam_package_code.yml  sam_release_code.yml  (+1 more)
SAMtemplates/: lambda_resources.old.yaml  lambda_resources.yaml  main_template.old.yaml  main_template.yaml  sandbox_template.yaml
_data/: dev-pr_clinical-tracker-pr-452_deployments.csv  dev-pr_clinical-tracker-pr-452_latest.csv  dev-pr_clinical-tracker-sandbox-pr-452_deployments.csv  dev-pr_clinical-tracker-sandbox-pr-452_latest.csv  int-sandbox_latest.csv  int_deployments.csv  int_latest.csv  internal-dev-sandbox_deployments.csv  internal-dev-sandbox_latest.csv  internal-dev_deployments.csv  internal-dev_latest.csv  internal-qa_deployments.csv  internal-qa_latest.csv  prod_deployments.csv  prod_latest.csv  ref_deployments.csv  ref_latest.csv  sandbox_deployments.csv  sandbox_latest.csv
cloudformation/: README.md  ci_resources.yml
privateCA/: create_certs.sh  openssl-ca.conf
release_notes/: v1.8.10-beta.md  v1.8.11-beta.md  v1.8.12-beta.md  v1.8.13-beta.md  v1.8.14-beta.md  v1.8.15-beta.md  v1.8.5-beta.md  v1.8.6-beta.md  v1.8.7-beta.md  v1.8.8-beta.md  v1.8.9-beta.md
scripts/: calculate_version.py  run_cfn_guard.sh  run_regression_tests.py
(+4 files in other folders)
