[project]
python = "^3.14"
name = "electronic-prescription-service-clinical-prescription-tracker"

[tool.poetry]
name = "electronic-prescription-service-clinical-prescription-tracker"
version = "0.0.1-alpha"
description = "Prescriptions API Definitions"
license = "MIT"
authors = [
    "EPS Team <eps_team>"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/electronic-prescription-service-clinical-prescription-tracker"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
black = "^26.1.0"
flake8 = "^7.1.2"
pip-licenses = "^5.5.1"

[tool.poetry.scripts]
